# nhentai-cli

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
src/: command.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  parse.rs  request.rs
src/dep/: command.rs  config.rs  error.rs  mod.rs  model.rs  parse.rs  request.rs
